--- a/goal.html
+++ b/goal.html
@@ -52,18 +52,20 @@
         </div>
       </section>
 
+      <p style="margin:8px 0 0;color:red">
+        スクリーンショット推奨
+      </p>
       <p style="margin:8px 0 0;color:#6b5e55">
         この画面または確認ページで<br>スタッフがチェックし前月祭<br>で使えるクーポン券と交換します。
       </p>
 
       <div style="display:flex; gap:10px; justify-content:center; margin-top:1rem; flex-wrap:wrap;">
         <button id="rankBtn" class="btn-go primary">ランキングを見る</button>
-        <button id="homeBtn" class="btn-go secondary">トップへ戻る</button>
       </div>
     </div>
   </main>
 
-    <section class="promo" aria-label="トークショー告知">
+  <section class="promo" aria-label="トークショー告知">
     <div class="promo-wrap">
       <p class="promo-title">所沢キャンパス祭 <strong>10/19</strong> に来ます！</p>
 
