--- a/goal.html
+++ b/goal.html
@@ -46,7 +46,7 @@
 
       <section class="proof" style="margin-top:1rem;">
         <h3 style="margin:.2rem 0 .5rem;">スタッフ確認</h3>
-        <div class="proof__wrap" style="display:flex; gap:16px; align-items:center; flex-wrap:wrap;">
+        <div class="proof__wrap" style="display:flex; justify-content:center; gap:16px; align-items:center; flex-wrap:wrap;">
           <canvas id="goalQr" width="220" height="220"
             style="background:#fff;border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,.08)"></canvas>
         </div>
