--- a/game1/tetris.html
+++ b/game1/tetris.html
@@ -43,7 +43,7 @@
   <div id="clearSplash" role="dialog" aria-modal="true" class="hidden">
     <div class="win-card">
       <h2 class="win-title">🎉 クリア！</h2>
-      <p class="win-desc">7ライン達成しました。<br>「宝箱を受け取る」を押して進んでください。</p>
+      <p class="win-desc">7ライン達成しました。<br>「宝箱を受け取る」<br>を押して進んでください。</p>
       <button id="claimBtn" class="btn-primary">宝箱を受け取る</button>
     </div>
   </div>
