--- a/tutorial.html
+++ b/tutorial.html
@@ -35,18 +35,46 @@
             <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
             <li>QR発見でミニゲームをプレイします。クリアでお宝を獲得できます</li>
             <li>獲得したらお得なクーポン券と交換できます</li>
-            <li>グランエミオ所沢で輪投げ50円引きクーポン券、シティタワー所沢クラッシィでレモンスカッシュ50円引きクーポン券を配布します</li>
           </ol>
         </section>
 
         <div class="section-sep" aria-hidden="true"></div>
 
+        <section class="section-block" id="prize-block" aria-labelledby="ttl-prize">
+          <h2 id="ttl-prize" class="section-title">景品コーナー</h2>
+
+          <div class="rewards">
+            <article class="reward-card">
+              <div class="place">グランエミオ所沢</div>
+              <div class="reward-line">
+                <span class="badge">クーポン</span>
+                <span class="amount"><strong>輪投げ 50円引き</strong></span>
+              </div>
+            </article>
+
+            <article class="reward-card">
+              <div class="place">シティタワー所沢クラッシィ</div>
+              <div class="reward-line">
+                <span class="badge">クーポン</span>
+                <span class="amount"><strong>レモンスカッシュ 50円引き</strong></span>
+              </div>
+            </article>
+          </div>
+
+          <p class="muted" style="margin-top:.6em;">
+            いずれか1カ所のクリアでOK。スポットに応じて受け取れるクーポンが決まる。
+          </p>
+        </section>
+
+        <div class="section-sep" aria-hidden="true"></div>
+
+
         <section class="section-block" id="safety-block" aria-labelledby="ttl-safety">
           <h2 id="ttl-safety" class="section-title">安全に楽しむために</h2>
           <ul class="bullets">
-            <li>歩きスマホは禁止です<br>周囲に注意しましょう</li>
-            <li>施設・店舗の迷惑にならないようにお願いします</li>
-            <li>お困りの点があれば気軽に<br>スタッフへ声かけをお願いします</li>
+            <li>歩きスマホは禁止</li>
+            <li>施設や店舗の迷惑にならないように</li>
+            <li>お困りの点があれば気軽にスタッフへ声かけをお願いします</li>
           </ul>
         </section>
       </div>
