--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画" />
-  <title>前月祭 宝探し企画 | 所沢キャンパス祭</title>
+  <title>宝探し企画 | 所沢キャンパス祭</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/treasurehunt.css" />
 </head>
@@ -37,7 +37,7 @@
   <main id="home">
     <section class="hero">
       <div class="hero-content">
-        <h2>早稲田大学 所沢キャンパス祭<br>前月祭 宝探し企画</h2>
+        <h2>早稲田大学 所沢キャンパス祭<br> 宝探し企画</h2>
         <p>
           宝探し企画へようこそ！<br>お宝を集めてお得なクーポン券を<br>ゲットしよう!
         </p>
@@ -52,6 +52,7 @@
           <li>マップを見ながらお宝を探す</li>
           <li>QRコードを見つけてスキャン</li>
           <li>ミニゲームクリアで宝ゲット</li>
+          <li><strong>4個以上見つけたら終了可能</strong>（6個でコンプリート）</li>
           <li>お宝を見つけ出してお得な<br>クーポン券をゲットしよう！</li>
         </ol>
       </div>
@@ -68,6 +69,16 @@
         </ul>
       </div>
     </section>
+
+    <section id="prize" class="section">
+      <div class="container">
+        <h2>景品とくじ引き</h2>
+        <p>終了後、見つけた数に応じてくじ引き回数が増えます。<br>
+          <strong>4個 → 1回</strong> ／ <strong>5個 → 2回</strong> ／ <strong>6個 → 3回</strong><br>
+          引いた中で<strong>最も等級の高い景品（1等が最上）を1人1つ</strong>獲得可能です。
+      </div>
+    </section>
+
 
     <section id="leaderboard" class="section">
       <div class="container">
