--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>参加受付 | 前月祭 宝探し企画</title>
+  <title>参加受付 | 宝探し企画</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/treasurehunt.css" />
@@ -27,8 +27,8 @@
     <div class="center-card narrow" role="form" aria-labelledby="regTitle">
       <h2 id="regTitle" style="margin-top:0">受付（チーム登録）</h2>
       <p style="margin:.25rem 0 1rem; color:#6b5e55">
-        チーム情報を登録します<br>
-        ゲーム開始後はマップを見ながらQRを探してください。
+        チーム情報を登録します
+        <br>登録後はマップで6つのお宝を探索し、<strong>4個以上で終了できます</strong>。
       </p>
       <form id="regForm" class="card" novalidate autocomplete="on">
         <label for="team">チーム名<br>ランキング等で公開します</label>
