--- a/tutorial.html
+++ b/tutorial.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>遊び方 | 前月祭 宝探し企画</title>
+  <title>遊び方 | 宝探し企画</title>
   <meta name="description" content="早稲田大学 所沢キャンパス祭 宝探し企画">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/treasurehunt.css" />
@@ -32,9 +32,10 @@
         <section class="section-block" id="howto-block" aria-labelledby="ttl-howto">
           <h2 id="ttl-howto" class="section-title">遊び方</h2>
           <ol class="steps">
-            <li>グランエミオ所沢かシティタワー所沢クラッシィのいずれかの探索をしてもらいます</li>
-            <li>QR発見でミニゲームをプレイします。クリアでお宝を獲得できます</li>
-            <li>獲得したらお得なクーポン券と交換できます</li>
+            <li>マップの<strong>6つの赤円</strong>からお宝を探索</li>
+            <li><strong>4個以上見つけたら終了可能</strong>（6個でコンプリート）</li>
+            <li>終了後、見つけた数に応じて<strong>くじ引きが引ける（4個=1回 / 5個=2回 / 6個=3回）</strong></li>
+            <li>くじ引きの結果から景品ゲット！</li>
           </ol>
         </section>
 
